added makefiles to linguist-vendored

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 include/liblvgl/**/*.h linguist-vendored
 include/pros/**/*.h linguist-vendored
 include/pros/**/*.hpp linguist-vendored
+common.mk linguist-vendored
